# everygarf

./: .gitignore  Cargo.toml  README.md  TODO  justfile
src/: api.rs  args.rs  cache.rs  colors.rs  dates.rs  download.rs  errors.rs  io.rs  lib.rs  main.rs  proxy.rs  tests.rs  url.rs
src/api/: fandom.rs  mod.rs
src/apis/: mod.rs
