[package]
name = "everygarf"
version = "2.6.0"
edition = "2021"
authors = ["darcy"]
description = "Concurrently download every Garfield comic to date"
license-file = "LICENSE"
documentation = "https://docs.rs/everygarf/latest/everygarf"
repository = "https://github.com/dxrcy/everygarf"
homepage = "https://github.com/dxrcy/everygarf"
readme = "README.md"
keywords = ["download", "garfield", "comic", "concurrent", "cli"]
categories = ["command-line-utilities", "concurrency"]
exclude = [".*", "/target/", "/justfile", "/TODO.md", "/image/", "/garfield/"]

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.29"
reqwest = "0.11.22"
image = "0.24.7"
bytes = "1.5.0"
chrono = "0.4.31"
dirs-next = "2.0.0"
notify-rust = "4.10.0"
fs_extra = "1.3.0"
humantime = "2.1.0"
