[package]
name = "everygarf"
version = "2.7.0"
edition = "2021"
authors = ["darcy"]
description = "Concurrently download every Garfield comic to date"
license-file = "LICENSE"
documentation = "https://docs.rs/everygarf/latest/everygarf"
repository = "https://github.com/dxrcy/everygarf"
homepage = "https://github.com/dxrcy/everygarf"
readme = "README.md"
keywords = ["download", "garfield", "comic", "concurrent", "cli"]
categories = ["command-line-utilities"]
exclude = [".*", "/target/", "/justfile", "/TODO.md", "/image/", "/garfield/"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
reqwest = "0.12.2"
image = "0.25.1"
bytes = "1.6.0"
chrono = "0.4.37"
dirs-next = "2.0.0"
notify-rust = "4.10.0"
thiserror = "1.0.58"
