[package]
name = "everygarf"
version = "2.7.0"
edition = "2021"
authors = ["darcy"]
description = "Concurrently download every Garfield comic to date"
license-file = "LICENSE"
documentation = "https://docs.rs/everygarf/latest/everygarf"
repository = "https://github.com/dxrcy/everygarf"
homepage = "https://github.com/dxrcy/everygarf"
readme = "README.md"
keywords = ["download", "garfield", "comic", "concurrent", "cli"]
categories = ["command-line-utilities"]
exclude = [".*", "/target/", "/justfile", "/TODO.md", "/image/", "/garfield/"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
reqwest = "0.12.22"
image = "0.25.6"
bytes = "1.10.1"
chrono = "0.4.41"
dirs-next = "2.0.0"
notify-rust = "4.11.7"
thiserror = "2.0.12"
